@@ -118,12 +118,14 @@ $isSSL
   http-request set-header X-SSL                       %[ssl_fc]
   http-request set-header X-SSL-Client-Used           %[ssl_c_used]
   http-request set-header X-SSL-Client-Verify         %[ssl_c_verify]
-  http-request set-header X-SSL-Client-SHA1           %{+Q}[ssl_c_sha1]
-  http-request set-header X-SSL-Client-DN             %{+Q}[ssl_c_s_dn]
-  http-request set-header X-SSL-Client-CN             %{+Q}[ssl_c_s_dn(cn)]
-  http-request set-header X-SSL-Issuer                %{+Q}[ssl_c_i_dn]
-  http-request set-header X-SSL-Client-Not-Before     %{+Q}[ssl_c_notbefore]
-  http-request set-header X-SSL-Client-Not-After      %{+Q}[ssl_c_notafter]
+  http-request set-header X-SSL-Client-SHA1           %[ssl_c_sha1]
+  http-request set-header X-SSL-Client-DN             %[ssl_c_s_dn]
+  http-request set-header X-SSL-Client-CN             %[ssl_c_s_dn(cn)]
+  http-request set-header X-SSL-Client-O              %[ssl_c_s_dn(o)]
+  http-request set-header X-SSL-Issuer                %[ssl_c_i_dn]
+  http-request set-header X-SSL-Issuer-O              %[ssl_c_i_dn(o)]
+  http-request set-header X-SSL-Client-Not-Before     %[ssl_c_notbefore]
+  http-request set-header X-SSL-Client-Not-After      %[ssl_c_notafter]
 % } else {
   http-request set-header X-Forwarded-Proto      http
 % }
