@@ -1,4 +1,6 @@
 3.4
+	+ Added EBox::Middleware::SSLAuth to validate SSL requests only
+	  using the certificate
 	+ Added template for download link
 	+ Created EBox::Util::Certificate, refactored create-certificate
 	  script
